--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-build-info-extractor-gradle-version=4.13.3-BAR
+build-info-extractor-gradle-version=4.13.x-BAR
 artifactory-maven-plugin-version=2.7.x-SNAPSHOT
-build-info-extractor-ivy-version=2.15.3-BAR
+build-info-extractor-ivy-version=2.15.x-BAR
 build-info-with-plugin=true
-build-info-extractor-maven3-version=2.15.3-BAR
-build-info-version=2.15.3-BAR
-build-info-extractor-npm-version=2.15.3-BAR
-build-info-latest-release-version=2.15.3-BAR
+build-info-extractor-maven3-version=2.15.x-BAR
+build-info-version=2.15.x-BAR
+build-info-extractor-npm-version=2.15.x-BAR
+build-info-latest-release-version=2.15.x-BAR
