[artifactory-release] Release version

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ artifactory-maven-plugin-version=2.7.x-SNAPSHOT
 build-info-extractor-ivy-version=2.15.x-BAR
 build-info-with-plugin=true
 build-info-extractor-maven3-version=2.15.x-BAR
-build-info-version=2.15.x-BAR
+build-info-version=4.15.4-BAR
 build-info-extractor-npm-version=2.15.x-BAR
-build-info-latest-release-version=2.15.x-BAR
+build-info-latest-release-version=4.15.4-BAR
