--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,56 +13,56 @@ environment:
 
   matrix:
     # Extractor Tests
-    - job_name: extractor_win
-      job_group: general
-      appveyor_build_worker_image: Visual Studio 2019
-      JAVA_HOME: C:\Program Files\Java\jdk1.8.0
-      TEST_SUIT:
-        "gradlew.bat clean build-info-api:test build-info-client:test build-info-extractor:test build-info-vcs:test"
-    - job_name: extractor_linux
-      job_group: general
-      appveyor_build_worker_image: Ubuntu
-      TEST_SUIT:
-        "./gradlew clean build-info-api:test build-info-client:test build-info-extractor:test build-info-vcs:test"
-
-    # Maven Tests
-    - job_name: maven_extractor_win
-      job_group: general
-      appveyor_build_worker_image: Visual Studio 2019
-      JAVA_HOME: C:\Program Files\Java\jdk1.8.0
-      TEST_SUIT:
-        "gradlew.bat clean build-info-extractor-maven3:test"
-    - job_name: maven_extractor_linux
-      job_group: general
-      appveyor_build_worker_image: Ubuntu
-      TEST_SUIT:
-        "./gradlew clean build-info-extractor-maven3:test"
-
-    # Gradle Tests
-    - job_name: gradle_extractor_win
-      job_group: general
-      appveyor_build_worker_image: Visual Studio 2019
-      JAVA_HOME: C:\Program Files\Java\jdk1.8.0
-      TEST_SUIT:
-        "gradlew.bat clean build-info-extractor-gradle:test"
-    - job_name: gradle_extractor_linux
-      job_group: general
-      appveyor_build_worker_image: Ubuntu
-      TEST_SUIT:
-        "./gradlew clean build-info-extractor-gradle:test"
-
-    # npm Tests
-    - job_name: npm_extractor_win
-      job_group: general
-      appveyor_build_worker_image: Visual Studio 2019
-      JAVA_HOME: C:\Program Files\Java\jdk1.8.0
-      TEST_SUIT:
-        "gradlew.bat clean build-info-extractor-npm:test"
-    - job_name: npm_extractor_linux
-      job_group: general
-      appveyor_build_worker_image: Ubuntu
-      TEST_SUIT:
-        "./gradlew clean build-info-extractor-npm:test"
+#    - job_name: extractor_win
+#      job_group: general
+#      appveyor_build_worker_image: Visual Studio 2019
+#      JAVA_HOME: C:\Program Files\Java\jdk1.8.0
+#      TEST_SUIT:
+#        "gradlew.bat clean build-info-api:test build-info-client:test build-info-extractor:test build-info-vcs:test"
+#    - job_name: extractor_linux
+#      job_group: general
+#      appveyor_build_worker_image: Ubuntu
+#      TEST_SUIT:
+#        "./gradlew clean build-info-api:test build-info-client:test build-info-extractor:test build-info-vcs:test"
+#
+#    # Maven Tests
+#    - job_name: maven_extractor_win
+#      job_group: general
+#      appveyor_build_worker_image: Visual Studio 2019
+#      JAVA_HOME: C:\Program Files\Java\jdk1.8.0
+#      TEST_SUIT:
+#        "gradlew.bat clean build-info-extractor-maven3:test"
+#    - job_name: maven_extractor_linux
+#      job_group: general
+#      appveyor_build_worker_image: Ubuntu
+#      TEST_SUIT:
+#        "./gradlew clean build-info-extractor-maven3:test"
+#
+#    # Gradle Tests
+#    - job_name: gradle_extractor_win
+#      job_group: general
+#      appveyor_build_worker_image: Visual Studio 2019
+#      JAVA_HOME: C:\Program Files\Java\jdk1.8.0
+#      TEST_SUIT:
+#        "gradlew.bat clean build-info-extractor-gradle:test"
+#    - job_name: gradle_extractor_linux
+#      job_group: general
+#      appveyor_build_worker_image: Ubuntu
+#      TEST_SUIT:
+#        "./gradlew clean build-info-extractor-gradle:test"
+#
+#    # npm Tests
+#    - job_name: npm_extractor_win
+#      job_group: general
+#      appveyor_build_worker_image: Visual Studio 2019
+#      JAVA_HOME: C:\Program Files\Java\jdk1.8.0
+#      TEST_SUIT:
+#        "gradlew.bat clean build-info-extractor-npm:test"
+#    - job_name: npm_extractor_linux
+#      job_group: general
+#      appveyor_build_worker_image: Ubuntu
+#      TEST_SUIT:
+#        "./gradlew clean build-info-extractor-npm:test"
 
     # Go Tests
     - job_name: go_extractor_win
@@ -88,53 +88,44 @@ environment:
     - job_name: pip_extractor_linux
       job_group: pip
       appveyor_build_worker_image: Ubuntu
-      PYTHON: $HOME/venv3.7.7
+      PYTHON: $HOME/venv3.7
       BITESTS_ARTIFACTORY_PIP_ENV: /home/appveyor/projects/build-info/pip-venv/bin
       TEST_SUIT:
         "./gradlew clean build-info-extractor-pip:test"
 
-    # NuGet Tests
-    - job_name: nuget_extractor_win
-      job_group: general
-      appveyor_build_worker_image: Visual Studio 2019
-      JAVA_HOME: C:\Program Files\Java\jdk1.8.0
-      # .NET CLI version
-      CLI_VERSION: Latest
-      TEST_SUIT:
-        "gradlew.bat clean build-info-extractor-nuget:test"
-    - job_name: nuget_extractor_linux
-      job_group: general
-      appveyor_build_worker_image: Ubuntu
-      # .NET CLI version
-      CLI_VERSION: Latest
-      TEST_SUIT:
-        "./gradlew clean build-info-extractor-nuget:test"
+#    # NuGet Tests
+#    - job_name: nuget_extractor_win
+#      job_group: general
+#      appveyor_build_worker_image: Visual Studio 2019
+#      JAVA_HOME: C:\Program Files\Java\jdk1.8.0
+#      # .NET CLI version
+#      CLI_VERSION: Latest
+#      TEST_SUIT:
+#        "gradlew.bat clean build-info-extractor-nuget:test"
+#    - job_name: nuget_extractor_linux
+#      job_group: general
+#      appveyor_build_worker_image: Ubuntu
+#      # .NET CLI version
+#      CLI_VERSION: Latest
+#      TEST_SUIT:
+#        "./gradlew clean build-info-extractor-nuget:test"
 
 for:
+  -
+    matrix:
+      only:
+        - job_group: general
+    test_script:
+      - sh: "$TEST_SUIT"
+      - cmd: "%TEST_SUIT%"
   -
     matrix:
       only:
         - job_group: pip
     test_script:
       - sh: "python -m venv pip-venv"
-      - sh: "env"
       - sh: "$TEST_SUIT"
-      - cmd: "cd"
       - cmd: "C:\\Python37-x64\\python -m venv pip-venv"
-      - cmd: "dir"
       - cmd: "%TEST_SUIT%"
-  -
-    matrix:
-      only:
-        - job_group: general
-    test_script:
-      - sh: "env"
-      - sh: "$TEST_SUIT"
-      - cmd: "%TEST_SUIT%"
-
-
-#test_script:
-#  - sh: "pwd && $TEST_SUIT"
-#  - cmd: "%TEST_SUIT%"
 
 build: off
