--- a/appveyor.yml
+++ b/appveyor.yml
@@ -123,6 +123,7 @@ for:
       only:
         - job_group: pip
     test_script:
+      - sh: "python --version"
       - sh: "python -m venv pip-venv"
       - sh: "$TEST_SUIT"
       - cmd: "C:\\Python37-x64\\python -m venv pip-venv"
