--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-stack: jdk 8, node 8, go 1.13
+stack: jdk 8, node 8, go 1.13, python 3.7.7
 skip_tags: true
 environment:
 
@@ -88,7 +88,7 @@ environment:
     - job_name: pip_extractor_linux
       job_group: pip
       appveyor_build_worker_image: Ubuntu
-      PYTHON: $HOME/venv3.8
+      PYTHON: $HOME/venv3.7.7
       BITESTS_ARTIFACTORY_PIP_ENV: /home/appveyor/projects/build-info/pip-venv/bin
       TEST_SUIT:
         "./gradlew clean build-info-extractor-pip:test"
